syntax = "proto3";

package seed;

message Address {
    string ip = 1;
    int32 port = 2;
}

message ClientBindingRequest {
    string cluster_id = 1;
    string target_virtual_ip = 2;
    string source_virtual_ip = 3;
}

message ClientBindingResponse {
    Address target_nated_addr = 1;
    bytes server_certificate = 2;
    bool failed_punch_request = 3;
}

message ServerBindingRequest {
    string cluster_id = 1;
    string virtual_ip = 2;
    bytes server_certificate = 3;
}

message ServerPunchRequest {
    Address client_nated_addr = 1;
    string client_virtual_ip = 2;
}

message NodeBindingRequest {
    string cluster_id = 1;
    uint32 cluster_size = 2;
    string source_virtual_ip = 3;
}

message NodeBindingResponse {}

service Seed {
    rpc BindClient(ClientBindingRequest) returns (ClientBindingResponse) {}
    rpc BindServer(ServerBindingRequest) returns (stream ServerPunchRequest) {}
    rpc BindNode(stream NodeBindingRequest) returns (NodeBindingResponse) {}
}
